# mofstructure

./: LICENSE  README.md  how-to-doc.html  pyproject.toml
.github/workflows/: python-app.yml
.ipynb_checkpoints/: tutorial-checkpoint.ipynb
data/: data
data/MOFDb/: ase_atoms_building_units.json  cluster_and_ligands.json  metal_info.json  porosity_data.csv  sbus_and_linkers.json
data/Result/: SARSUC_metal_cluster_1.xyz  SARSUC_metal_sbu_1.xyz  SARSUC_organic_ligand_1.xyz  SARSUC_organic_ligand_2.xyz  SARSUC_organic_sbu_2.xyz  SARSUC_porosity_data.csv
data/Result/EDUSIF/: EDUSIF_metal_sbu_1.xyz  EDUSIF_organic_ligand_1.xyz  EDUSIF_porosity_data.csv
data/cif/: Kick_0.cif
doc/: how-to-doc.ipynb
docs/source/: api_reference.rst  conf.py  examples.rst  index.rst  updates.rst
docs/source/_static/: style.css
docs/source/_templates/: layout.html
mofstructure/: __init__.py  buildingunits.py  cof_stacking.py  collect_building_units.py  collect_data.py  collect_oms.py  collect_porosity.py  filetyper.py  mofdeconstructor.py  porosity.py  structure.py
mofstructure/obsolate/: buildingunits.py  collect_building_units.py  collect_oms.py  collect_porosity.py
mofstructure/scripts/: buildingunits.py  collect_building_units.py  collect_data.py  collect_oms.py  collect_porosity.py  curate_structures.py
source/: usage.rst
source/_static/: style.css
tests/: load_test.py  test_cof_stacking.py  test_porosity.py  test_sbu_decontruction.py  test_structure.py
tests/test_data/: AA.cif
