[tool.poetry]
name = "mofstructure"
version = "0.1.8.2"
description = "A Python tool to deconstruct MOFs into building units and compute porosity. The code removes guests from MOFs and all porous systems, computes SMILES strings and InChIKeys of all building units."
keywords = ["guest removal", "InChIKeys", "InChI", "SMILES", "PLD", "LCD", "MOF", "COF", "zeolites", "accessible surface area", "void fraction", "coordination number", "porosity", "zeo++", "SBU", "point of extension"]
authors = ["Dinga Wonanke <bafgreat@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9"
ase = ">=3.19.0"
networkx = ">=2.6.3"
numpy = ">=1.21.6,<2"
openbabel-wheel = "3.1.1.16"
pandas = ">=1.3.5"
pymatgen = "==2024.2.20"
pyzeo = ">=0.1.1"
rdkit = {version = ">=2022.9.5", optional = true}
omsdetector_forked = ">=2024.11.13"
sphinx = "<8.0.2"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-copybutton = "^0.5.2"

[tool.poetry.scripts]
mofstructure = "mofstructure.buildingunits:main"
mofstructure_database = "mofstructure.collect_data:main"
mofstructure_building_units = "mofstructure.collect_building_units:main"
mofstructure_oms = "mofstructure.collect_oms:main"
mofstructure_porosity = "mofstructure.collect_porosity:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.2"
sphinx = "<8.0.2"

[tool.poetry.extras]
rdkit = ["rdkit"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
